# idb-wb-pipeline

./: .gitignore  LICENSE  README.md  app.py  fetch_wb.py  pyproject.toml
assets/: style.css
