[project]
name = "idb-wb-pipeline"
version = "0.0.1"
description = "World Bank data pipeline for IDB dashboard"
authors = [
    {name = "baltierra",email = "fabs@illinois.edu"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "dash (>=3.0.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
